envoy/envoy.yaml
static_resources:
  listeners:
  - name: ingress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/api/v1/users"
                route:
                  cluster: user-service
                  timeout: 10s
                  retry_policy:
                    retry_on: "unavailable,reset,resource_exhausted,connect-failure"
                    num_retries: 3
                    retry_back_off:
                      base_interval: 0.25s
                      max_interval: 2s
              - match:
                  prefix: "/api/v1/orders"
                route:
                  cluster: order-service
                  timeout: 10s
                  retry_policy:
                    retry_on: "unavailable,reset,resource_exhausted,connect-failure"
                    num_retries: 3
                    retry_back_off:
                      base_interval: 0.25s
                      max_interval: 2s
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              with_request_body:
                max_request_bytes: 1024
              http_service:
                server_uri:
                  uri: http://ext-authz:50053
                  cluster: ext-authz
                  timeout: 0.5s
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: "x-api-key"
          - name: envoy.filters.http.local_ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: rate_limit
              token_bucket:
                max_tokens: 100
                tokens_per_fill: 10
                fill_interval: 60s
              filter_enabled:
                default_value:
                  numerator: 100
                runtime_key: local_rate_limit_enabled
              filter_enforced:
                default_value:
                  numerator: 100
                runtime_key: local_rate_limit_enforced
              response_headers_to_add:
              - header:
                  key: "x-rate-limited"
                  value: "true"
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: "/etc/envoy/proto-descriptor.pb"
              services:
              - "user.v1.UserService"
              - "order.v1.OrderService"
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
              convert_grpc_status: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: user-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 5s
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: "/etc/envoy/certs/api-gateway/cert.pem"
            private_key:
              filename: "/etc/envoy/certs/api-gateway/key.pem"
          validation_context:
            trusted_ca:
              filename: "/etc/envoy/certs/ca/ca.pem"
    load_assignment:
      cluster_name: user-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: user-service
                port_value: 50051
    circuit_breakers:
      thresholds:
      - priority: DEFAULT
        max_connections: 100
        max_pending_requests: 10
        max_requests: 50
        max_retries: 5

  - name: order-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 5s
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: "/etc/envoy/certs/api-gateway/cert.pem"
            private_key:
              filename: "/etc/envoy/certs/api-gateway/key.pem"
          validation_context:
            trusted_ca:
              filename: "/etc/envoy/certs/ca/ca.pem"
    load_assignment:
      cluster_name: order-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: order-service
                port_value: 50052
    circuit_breakers:
      thresholds:
      - priority: DEFAULT
        max_connections: 100
        max_pending_requests: 10
        max_requests: 50
        max_retries: 5

  - name: ext-authz
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 0.5s
    load_assignment:
      cluster_name: ext-authz
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ext-authz
                port_value: 50053

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

layered_runtime:
  layers:
  - name: static_layer
    static_layer:
      local_rate_limit_enabled: true
      local_rate_limit_enforced: true
